[package]
name = "input-redirection-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
directories = "6.0.0"
eframe = "0.31.1"
gilrs = "0.11.0"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.22"

[profile.release]
strip = "symbols"  # Or "debuginfo" or "all"
lto = true
codegen-units = 1
panic = "abort"
debug-assertions = false