[package]
name = "input-redirection-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
ctrlc = "3.4.7"
directories = "6.0.0"
eframe = "0.31.1"
gilrs = { version = "0.11", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

[target.'cfg(windows)'.dependencies]
gilrs = { version = "0.11", default-features = false, features = ["xinput"] }

[target.'cfg(unix)'.dependencies]
gilrs = { version = "0.11" }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
debug-assertions = false

[build-dependencies]
winresource = "0.1.20"
image = "0.25.6"
